# GitComet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  THEMES.md
crates/gitcomet-app/: Cargo.toml
crates/gitcomet-app/src/: cli.rs  crashlog.rs  difftool_mode.rs  extract_fixtures_mode.rs  main.rs  mergetool_mode.rs  setup_mode.rs
crates/gitcomet-app/src/cli/: compat.rs  git_config.rs  tests.rs
crates/gitcomet-app/src/mergetool_mode/: tests.rs
crates/gitcomet-app/tests/: difftool_git_integration.rs  mergetool_git_integration.rs  standalone_tool_mode_integration.rs
crates/gitcomet-core/: Cargo.toml
crates/gitcomet-core/src/: auth.rs  conflict_labels.rs  conflict_session.rs  domain.rs  error.rs  file_diff.rs  lib.rs  merge.rs  merge_extraction.rs  mergetool_trace.rs  process.rs  services.rs  text_utils.rs
crates/gitcomet-core/src/conflict_session/: autosolve.rs  history.rs  marker_parse.rs  subchunk.rs  tests.rs
crates/gitcomet-git-gix/: Cargo.toml
crates/gitcomet-git-gix/src/: backend.rs  lib.rs  util.rs
crates/gitcomet-git-gix/src/repo/: blame.rs  diff.rs  git_ops.rs  history.rs  log.rs  mergetool.rs  mod.rs  patch.rs  porcelain.rs  remotes.rs  status.rs  submodules.rs  tags.rs  worktrees.rs
crates/gitcomet-git-gix/tests/: blame_integration.rs  log_integration.rs  patch_integration.rs  refs_integration.rs  remote_management_integration.rs  status_integration.rs  submodules_integration.rs  upstream_divergence_integration.rs  upstream_integration.rs
crates/gitcomet-state/: Cargo.toml
crates/gitcomet-state/src/: model.rs  session.rs
crates/gitcomet-state/src/msg/: effect.rs  message.rs  message_debug.rs  repo_command_kind.rs  repo_external_change.rs
crates/gitcomet-state/src/store/: effects.rs  mod.rs  reducer.rs  reducer_diagnostics.rs  repo_monitor.rs  tests.rs
crates/gitcomet-state/src/store/effects/: clone.rs  repo_actions.rs  repo_commands.rs  repo_load.rs
crates/gitcomet-state/src/store/reducer/: actions_emit_effects.rs  diff_selection.rs  effects.rs  external_and_history.rs  repo_management.rs  util.rs
crates/gitcomet-state/src/store/tests/: actions_emit_effects.rs  auth_prompt.rs  conflict_session.rs  diff_selection.rs  effects.rs  external_and_history.rs  reducer_diagnostics.rs  repo_management.rs  send_failures.rs
crates/gitcomet-state/tests/: session_integration.rs
crates/gitcomet-ui-gpui/: Cargo.toml
crates/gitcomet-ui-gpui/assets/: open_source_licenses.tsv
crates/gitcomet-ui-gpui/assets/themes/: gitcomet.json  sunset_veil.json  tokyo_night.json
crates/gitcomet-ui-gpui/benches/: performance.rs
crates/gitcomet-ui-gpui/src/: app.rs  focused_diff.rs  launch_guard.rs  lib.rs  linux_gui_env.rs  smoke_tests.rs  test_support.rs  theme.rs
crates/gitcomet-ui-gpui/src/kit/: mod.rs  scrollbar.rs  text_input.rs  text_model.rs
crates/gitcomet-ui-gpui/src/view/: branch_sidebar.rs  caches.rs  chrome.rs  clone_progress.rs  conflict_resolver.rs  diff_text_model.rs  diff_text_selection.rs  diff_utils.rs  history_graph.rs  history_mode.rs  linux_desktop_integration.rs  markdown_preview.rs  mod.rs  mod_helpers.rs  patch_split.rs  perf.rs  platform_open.rs  poller.rs  repo_open.rs  settings_window.rs  splash.rs  state_apply.rs  tests.rs  toast_host.rs  tooltip.rs  tooltip_host.rs  update_check.rs
crates/gitcomet-ui-gpui/src/view/components/: button.rs  context_menu.rs  mod.rs  picker_prompt.rs  tab.rs
crates/gitcomet-ui-gpui/src/view/conflict_resolver/: split_row_index.rs  tests.rs  word_highlight.rs
crates/gitcomet-ui-gpui/src/view/panels/: action_bar.rs  layout.rs  main.rs  mod.rs  popover.rs  repo_tabs_bar.rs  tests.rs
crates/gitcomet-ui-gpui/src/view/panes/: details.rs  history.rs  main.rs  sidebar.rs
crates/gitcomet-ui-gpui/src/view/rows/: benchmarks.rs  conflict_canvas.rs  conflict_resolver.rs  diff.rs  diff_canvas.rs  diff_text.rs  history.rs  history_canvas.rs  history_graph_paint.rs  mod.rs  sidebar.rs  status.rs
crates/gitgpui-app/: Cargo.toml
crates/gitgpui-app/src/: cli.rs  difftool_mode.rs  extract_fixtures_mode.rs  main.rs  mergetool_mode.rs  setup_mode.rs
crates/gitgpui-app/tests/: difftool_git_integration.rs  extract_merge_fixtures_integration.rs  mergetool_git_integration.rs  standalone_tool_mode_integration.rs
crates/gitgpui-git-gix/: Cargo.toml
crates/gitgpui-git-gix/src/repo/: blame.rs  diff.rs  mergetool.rs  mod.rs
crates/gitgpui-git-gix/tests/: conflict_base_checkout_integration.rs  status_integration.rs
crates/gitgpui-state/: Cargo.toml
crates/gitgpui-state/src/: model.rs  msg.rs  session.rs
crates/gitgpui-state/src/msg/: effect.rs  message.rs  message_debug.rs  repo_command_kind.rs
crates/gitgpui-state/src/store/: effects.rs  executor.rs  reducer.rs  tests.rs
crates/gitgpui-state/src/store/effects/: repo_commands.rs  repo_load.rs
crates/gitgpui-state/src/store/reducer/: actions_emit_effects.rs  conflict_interactions.rs  effects.rs  util.rs
crates/gitgpui-state/src/store/tests/: actions_emit_effects.rs  conflict_session.rs  conflict_telemetry.rs  diff_selection.rs  effects.rs  repo_management.rs
crates/gitgpui-ui-gpui/: Cargo.toml
crates/gitgpui-ui-gpui/benches/: performance.rs
crates/gitgpui-ui-gpui/src/: app.rs  focused_diff.rs  lib.rs  smoke_tests.rs
crates/gitgpui-ui-gpui/src/kit/: mod.rs  text_input.rs
crates/gitgpui-ui-gpui/src/view/: conflict_resolver.rs  date_time.rs  diff_navigation.rs  diff_utils.rs  linux_desktop_integration.rs  mod.rs  patch_split.rs  perf.rs  repo_open.rs  state_apply.rs  toast_host.rs  tooltip.rs
crates/gitgpui-ui-gpui/src/view/components/: button.rs  components.rs  context_menu.rs  diff_stat.rs  mod.rs  picker_prompt.rs  split_button.rs  tab.rs  tab_bar.rs  toast.rs  tokens.rs
crates/gitgpui-ui-gpui/src/view/panels/: action_bar.rs  bars.rs  layout.rs  main.rs  mod.rs  popover.rs  repo_tabs_bar.rs  tests.rs
crates/gitgpui-ui-gpui/src/view/panes/: details.rs  history.rs  main.rs  sidebar.rs
crates/gitgpui-ui-gpui/src/zed_port/: button.rs
crates/win32-window-utils/: Cargo.toml
crates/win32-window-utils/src/: lib.rs
(+238 files in other folders)
