[workspace]
resolver = "3"
members = [
  "crates/gitcomet",
  "crates/gitcomet-core",
  "crates/gitcomet-git",
  "crates/gitcomet-git-gix",
  "crates/gitcomet-state",
  "crates/gitcomet-ui",
  "crates/gitcomet-ui-gpui",
]

default-members = [
  "crates/gitcomet",
  "crates/gitcomet-core",
  "crates/gitcomet-git",
  "crates/gitcomet-git-gix",
  "crates/gitcomet-state",
  "crates/gitcomet-ui",
  "crates/gitcomet-ui-gpui",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["AutoExplore Oy <info@autoexplore.ai>"]
repository = "https://github.com/Auto-Explore/GitComet"
rust-version = "1.94.0"

[workspace.dependencies]
# Internal crates
gitcomet-core = { path = "crates/gitcomet-core" }
gitcomet-git = { path = "crates/gitcomet-git" }
gitcomet-git-gix = { path = "crates/gitcomet-git-gix" }
gitcomet-state = { path = "crates/gitcomet-state" }
gitcomet-ui = { path = "crates/gitcomet-ui" }
gitcomet-ui-gpui = { path = "crates/gitcomet-ui-gpui", default-features = false }

# External crates
clap = { version = "4.6.0", features = ["derive"] }
criterion = "0.8.2"
gix = { version = "0.80.0", default-features = false, features = ["max-performance-safe", "comfort", "basic", "auto-chain-error", "status", "blame"] }
gpui = { version = "0.2.2" }
lru = "0.16"
mimalloc = { version = "0.1.48", features = ["v3"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
notify = "9.0.0-rc.2"
regex = "1.12.3"
resvg = { version = "0.47.0", default-features = false, features = ["text", "system-fonts", "raster-images"] }
rustc-hash = "2.1.1"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
strsim = "0.11.1"
tempfile = "3.27.0"
thiserror = "2.0"
tree-sitter = "0.26.7"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.2"
unicode-segmentation = "1.12.0"
zed-reqwest = { version = "0.12.15-zed", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
incremental = true
opt-level = 0

[profile.test]
opt-level = 1
split-debuginfo = "packed"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"
