[package]
name = "gitcomet-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-support = []
benchmarks = []

[dependencies]
regex = { workspace = true }
tempfile = { workspace = true }
rustc-hash = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
