[package]
name = "gitcomet-state"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gitcomet-core = { workspace = true }
gix = { workspace = true }
notify = { workspace = true }
smol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
gitcomet-core = { workspace = true, features = ["test-support"] }
