[package]
name = "gitgpui-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["ui-gpui", "gix"]
ui = ["dep:gitgpui-ui"]
ui-gpui = ["ui", "dep:gitgpui-ui-gpui"]
gix = ["dep:gitgpui-git-gix"]

[dependencies]
clap = { workspace = true }
gitgpui-core = { workspace = true }
gitgpui-git = { workspace = true }
gitgpui-git-gix = { workspace = true, optional = true }
gitgpui-ui = { workspace = true, optional = true }
gitgpui-ui-gpui = { workspace = true, optional = true }
mimalloc = { workspace = true }
tempfile = { workspace = true }
