[package]
name = "gitgpui-ui-gpui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gitgpui-core = { workspace = true }
gitgpui-state = { workspace = true }
gitgpui-ui = { workspace = true }
gpui = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-yaml = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "performance"
harness = false
